--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "jquery": "^3.6.3",
     "sass": "^1.57.1",
     "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {
+    "mixitup": "^3.3.1"
   }
 }
